customized pages a bit

--- a/index.html
+++ b/index.html
@@ -38,27 +38,18 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/ymasory/ShowTree/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/ymasory/ShowTree/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/ymasory/ShowTree">ShowTree</a>
-      <span class="small">by <a href="http://github.com/ymasory">ymasory</a></span></h1>
+    <h1><a href="http://github.com/ymasory/ShowTree">ShowTree</a></h1>
 
     <div class="description">
       A Java Swing application for producing pretty drawings of trees (i.e., acyclic connected graphs). Implements old and new drawing algorithms. Reads Penn Treebank format trees, and generates ones randomly.
     </div>
 
-    <h2>License</h2>
-<p>GPL version 3</p>
-<h2>Contact</h2>
-<p>Yuvi Masory (ymasory on GitHub)<br/>      </p>
+
+<h2>Download</h2>
+<p>Please visit the <a href="http://github.com/ymasory/ShowTree/downloads">download page.</a><br/>      </p>
 
 
-    <h2>Download</h2>
+    <h2>Source Code</h2>
     <p>
       You can download this project in either
       <a href="http://github.com/ymasory/ShowTree/zipball/master">zip</a> or
@@ -72,6 +63,10 @@
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/ymasory/ShowTree">ymasory/ShowTree</a>
     </div>
+
+<h2>Contact</h2>
+<p>Yuvi Masory (ymasory on GitHub)<br/>      </p>
+
 
   </div>
 
