--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 <h2>Download</h2>
-<p>Please visit the <a href="http://github.com/ymasory/ShowTree/downloads">download page.</a><br/>      </p>
+<p>Please visit the <a href="http://github.com/ymasory/ShowTree/downloads">download page</a>.<br/>      </p>
 
 
     <h2>Source Code</h2>
@@ -58,11 +58,9 @@
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/ymasory/ShowTree</pre>
+      Alternatively, you can <a href="http://github.com/ymasory/ShowTree">browse the code</a> through GitHub.
     </p>
 
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/ymasory/ShowTree">ymasory/ShowTree</a>
-    </div>
 
 <h2>Contact</h2>
 <p>Yuvi Masory (ymasory on GitHub)<br/>      </p>
