--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </p>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
-      <pre>$ git clone git://github.com/ymasory/ShowTree</pre>
+      <pre>$ git clone git://github.com/ymasory/ShowTree.git</pre>
       Alternatively, you can <a href="http://github.com/ymasory/ShowTree">browse the code</a> through GitHub.
     </p>
 
