--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       A Java Swing application for producing pretty drawings of trees (i.e., acyclic connected graphs). Implements old and new drawing algorithms. Reads Penn Treebank format trees, and generates ones randomly.
     </div>
 
+    <h2>Overview</h2>
+    <p>
+ShowTree implements old and new tree-positioning algorithms. It reads in Penn Treebank format trees, and can generate trees randomly. I wrote this program as the applied part of my undergraduate senior project on tree visualization, in 2009. Even though I wrote it as a student, the tree-positioning code may be useful to someone. See /src/about.txt (also viewable in the help menu of the program) for an exact list algorithms implemented.
+    </p>
+
 
 <h2>Download</h2>
 <p>Please visit the <a href="http://github.com/ymasory/ShowTree/downloads">download page</a>.<br/>      </p>
