remove redundancy, add screenshot

--- a/index.html
+++ b/index.html
@@ -41,12 +41,17 @@
     <h1><a href="http://github.com/ymasory/ShowTree">ShowTree</a></h1>
 
     <div class="description">
-      A Java Swing application for producing pretty drawings of trees (i.e., acyclic connected graphs). Implements old and new drawing algorithms. Reads Penn Treebank format trees, and generates ones randomly.
+      A Java Swing application for producing pretty drawings of trees (i.e., acyclic connected graphs).
     </div>
 
     <h2>Overview</h2>
     <p>
 ShowTree implements old and new tree-positioning algorithms. It reads in Penn Treebank format trees, and can generate trees randomly. I wrote this program as the applied part of my undergraduate senior project on tree visualization, in 2009. Even though I wrote it as a student, the tree-positioning code may be useful to someone. See /src/about.txt (also viewable in the help menu of the program) for an exact list algorithms implemented.
+    </p>
+
+    <h2>Screenshot</h2>
+    <p>
+      <img src="screenshot.png" alt="screenshot"/>
     </p>
 
 
