add link to homepage

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ ShowTree implements old and new tree-positioning algorithms. It reads in Penn Tr
 
 
 <h2>Contact</h2>
-<p>Yuvi Masory (ymasory on GitHub)<br/>      </p>
+<p><a href="http://yuvimasory.com/">Yuvi Masory</a><br/></p>
 
 
   </div>
