limit pic width to page width

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ ShowTree implements old and new tree-positioning algorithms. It reads in Penn Tr
 
     <h2>Screenshot</h2>
     <p>
-      <img src="screenshot.png" alt="screenshot"/>
+      <img src="screenshot.png" alt="screenshot" width="700"/>
     </p>
 
 
