--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <h2>Overview</h2>
     <p>
-ShowTree implements old and new tree-positioning algorithms. It reads in Penn Treebank format trees, and can generate trees randomly. I wrote this program as the applied part of my undergraduate senior project on tree visualization, in 2009. Even though I wrote it as a student, the tree-positioning code may be useful to someone. See /src/about.txt (also viewable in the help menu of the program) for an exact list algorithms implemented.
+ShowTree implements old and new tree-positioning algorithms. It reads in Penn Treebank format trees, and can generate trees randomly. I wrote this program as the applied part of my undergraduate senior project on tree visualization, in 2009. Even though I wrote it as a student, the tree-positioning code may be useful to someone. See /src/about.txt (also viewable in the help menu of the program) for an exact list of algorithms implemented.
     </p>
 
     <h2>Screenshot</h2>
