--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>ShowTree</h1>
 
     <div class="description">
-      A Java Swing application for producing pretty drawings of trees (i.e., acyclic connected graphs).
+      A Java Swing application for producing pretty drawings of trees (i.e., acyclic connected graphs)
     </div>
 
     <h2>Overview</h2>
